--- a/AFNetworking 二次封装/Base.lproj/Main.storyboard
+++ b/AFNetworking 二次封装/Base.lproj/Main.storyboard
@@ -100,10 +100,17 @@
                                     <action selector="suapendAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pNF-x3-fb1"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0JI-qY-mxI">
+                                <rect key="frame" x="54" y="519" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="rl9-E4-ban"/>
                     </view>
+                    <connections>
+                        <outlet property="imageVIew" destination="0JI-qY-mxI" id="raT-Pw-JZb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
